force-app/main/default/objects/SalesforceLicense__c/SalesforceLicense__c.object-meta.xml
<CustomObject>
    <label>Salesforce License</label>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>