force-app/main/default/objects/SalesforceLicense__c/fields/AvailabletoAllocatetoPool__c.field-meta.xml
<CustomField>
    <fullName>AvailabletoAllocatetoPool__c</fullName>
    <formula>TotalLicenses__c - TotalPoolAllocations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available to Allocate to Pool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>