force-app/main/default/objects/SalesforceLicense__c/fields/SalesforceLicenseKey__c.field-meta.xml
<CustomField>
    <fullName>SalesforceLicenseKey__c</fullName>
    <externalId>true</externalId>
    <label>Salesforce License Key</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>