force-app/main/default/objects/SalesforceLicense__c/fields/SalesforceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceRecordId__c</fullName>
    <externalId>true</externalId>
    <label>Salesforce Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>