force-app/main/default/objects/SalesforceLicense__c/fields/TotalLicenses__c.field-meta.xml
<CustomField>
    <fullName>TotalLicenses__c</fullName>
    <label>Total Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>