force-app/main/default/objects/SalesforceLicense__c/fields/TotalPoolAllocations__c.field-meta.xml
<CustomField>
    <fullName>TotalPoolAllocations__c</fullName>
    <label>Total Pool Allocations</label>
    <summaryForeignKey>SalesforceLicensePoolAllocation__c.Salesforce_License__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>