force-app/main/default/objects/SalesforceLicense__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Permission Set License</fullName>
            </value>
            <value>
                <fullName>User License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>