force-app/main/default/objects/SalesforceLicense__c/fields/UsedLicenses__c.field-meta.xml
<CustomField>
    <fullName>UsedLicenses__c</fullName>
    <label>Used Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>