force-app/main/default/objects/SalesforceLicense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesforceLicenseKey__c</columns>
    <columns>Type__c</columns>
    <columns>TotalLicenses__c</columns>
    <columns>UsedLicenses__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>